Refactor | CAKK-103 | Entity 네이밍 변경 및 애그리거트 추상 클래스 구현
* Chore | CAKK-103 | Domain 모듈 의존성 설정

* Feature | CAKK-103 | 애그리거트, 값 객체 관련 추상 클래스 구현

* Refactor | CAKK-103 | Entity 네이밍 변경

* Refactor | CAKK-103 | map index accessor 변경